resources/gradients/index.html and mgo-gradients.py:  added a style to the <div>'s and removed the <p>'s in each brush entry.
resources/patterns/index.html and mgo-patterns.py:  added a style
to the <div>'s and removed the <p>'s in each brush entry.

--- a/resources/gradients/index.html
+++ b/resources/gradients/index.html
@@ -6,85 +6,85 @@
 <div class="subtitle">Included With The GIMP</div>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
 <div>this is the beginning</div>
-<div><img src="Abstract_1.png" width="64" height="32" alt="gradient sample"><p>Abstract_1</p></div>
-<div><img src="Abstract_2.png" width="64" height="32" alt="gradient sample"><p>Abstract_2</p></div>
-<div><img src="Abstract_3.png" width="64" height="32" alt="gradient sample"><p>Abstract_3</p></div>
-<div><img src="Aneurism.png" width="64" height="32" alt="gradient sample"><p>Aneurism</p></div>
-<div><img src="Blinds.png" width="64" height="32" alt="gradient sample"><p>Blinds</p></div>
-<div><img src="Blue_Green.png" width="64" height="32" alt="gradient sample"><p>Blue_Green</p></div>
-<div><img src="Browns.png" width="64" height="32" alt="gradient sample"><p>Browns</p></div>
-<div><img src="Brushed_Aluminium.png" width="64" height="32" alt="gradient sample"><p>Brushed_Aluminium</p></div>
-<div><img src="Burning_Paper.png" width="64" height="32" alt="gradient sample"><p>Burning_Paper</p></div>
-<div><img src="Burning_Transparency.png" width="64" height="32" alt="gradient sample"><p>Burning_Transparency</p></div>
-<div><img src="CD.png" width="64" height="32" alt="gradient sample"><p>CD</p></div>
-<div><img src="CD_Half.png" width="64" height="32" alt="gradient sample"><p>CD_Half</p></div>
-<div><img src="Caribbean_Blues.png" width="64" height="32" alt="gradient sample"><p>Caribbean_Blues</p></div>
-<div><img src="Coffee.png" width="64" height="32" alt="gradient sample"><p>Coffee</p></div>
-<div><img src="Cold_Steel.png" width="64" height="32" alt="gradient sample"><p>Cold_Steel</p></div>
-<div><img src="Cold_Steel_2.png" width="64" height="32" alt="gradient sample"><p>Cold_Steel_2</p></div>
-<div><img src="Crown_molding.png" width="64" height="32" alt="gradient sample"><p>Crown_molding</p></div>
-<div><img src="Dark_1.png" width="64" height="32" alt="gradient sample"><p>Dark_1</p></div>
-<div><img src="Deep_Sea.png" width="64" height="32" alt="gradient sample"><p>Deep_Sea</p></div>
-<div><img src="Default.png" width="64" height="32" alt="gradient sample"><p>Default</p></div>
-<div><img src="Flare_Glow_Angular_1.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Angular_1</p></div>
-<div><img src="Flare_Glow_Radial_1.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Radial_1</p></div>
-<div><img src="Flare_Glow_Radial_2.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Radial_2</p></div>
-<div><img src="Flare_Glow_Radial_3.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Radial_3</p></div>
-<div><img src="Flare_Glow_Radial_4.png" width="64" height="32" alt="gradient sample"><p>Flare_Glow_Radial_4</p></div>
-<div><img src="Flare_Radial_101.png" width="64" height="32" alt="gradient sample"><p>Flare_Radial_101</p></div>
-<div><img src="Flare_Radial_102.png" width="64" height="32" alt="gradient sample"><p>Flare_Radial_102</p></div>
-<div><img src="Flare_Radial_103.png" width="64" height="32" alt="gradient sample"><p>Flare_Radial_103</p></div>
-<div><img src="Flare_Rays_Radial_1.png" width="64" height="32" alt="gradient sample"><p>Flare_Rays_Radial_1</p></div>
-<div><img src="Flare_Rays_Radial_2.png" width="64" height="32" alt="gradient sample"><p>Flare_Rays_Radial_2</p></div>
-<div><img src="Flare_Rays_Size_1.png" width="64" height="32" alt="gradient sample"><p>Flare_Rays_Size_1</p></div>
-<div><img src="Flare_Sizefac_101.png" width="64" height="32" alt="gradient sample"><p>Flare_Sizefac_101</p></div>
-<div><img src="Four_bars.png" width="64" height="32" alt="gradient sample"><p>Four_bars</p></div>
-<div><img src="French_flag.png" width="64" height="32" alt="gradient sample"><p>French_flag</p></div>
-<div><img src="French_flag_smooth.png" width="64" height="32" alt="gradient sample"><p>French_flag_smooth</p></div>
-<div><img src="Full_saturation_spectrum_CCW.png" width="64" height="32" alt="gradient sample"><p>Full_saturation_spectrum_CCW</p></div>
-<div><img src="Full_saturation_spectrum_CW.png" width="64" height="32" alt="gradient sample"><p>Full_saturation_spectrum_CW</p></div>
-<div><img src="German_flag.png" width="64" height="32" alt="gradient sample"><p>German_flag</p></div>
-<div><img src="German_flag_smooth.png" width="64" height="32" alt="gradient sample"><p>German_flag_smooth</p></div>
+<div><img style="vertical-align: text-middle;" src="Abstract_1.png" width="64" height="32" alt="gradient sample">Abstract_1</div>
+<div><img style="vertical-align: text-middle;" src="Abstract_2.png" width="64" height="32" alt="gradient sample">Abstract_2</div>
+<div><img style="vertical-align: text-middle;" src="Abstract_3.png" width="64" height="32" alt="gradient sample">Abstract_3</div>
+<div><img style="vertical-align: text-middle;" src="Aneurism.png" width="64" height="32" alt="gradient sample">Aneurism</div>
+<div><img style="vertical-align: text-middle;" src="Blinds.png" width="64" height="32" alt="gradient sample">Blinds</div>
+<div><img style="vertical-align: text-middle;" src="Blue_Green.png" width="64" height="32" alt="gradient sample">Blue_Green</div>
+<div><img style="vertical-align: text-middle;" src="Browns.png" width="64" height="32" alt="gradient sample">Browns</div>
+<div><img style="vertical-align: text-middle;" src="Brushed_Aluminium.png" width="64" height="32" alt="gradient sample">Brushed_Aluminium</div>
+<div><img style="vertical-align: text-middle;" src="Burning_Paper.png" width="64" height="32" alt="gradient sample">Burning_Paper</div>
+<div><img style="vertical-align: text-middle;" src="Burning_Transparency.png" width="64" height="32" alt="gradient sample">Burning_Transparency</div>
+<div><img style="vertical-align: text-middle;" src="CD.png" width="64" height="32" alt="gradient sample">CD</div>
+<div><img style="vertical-align: text-middle;" src="CD_Half.png" width="64" height="32" alt="gradient sample">CD_Half</div>
+<div><img style="vertical-align: text-middle;" src="Caribbean_Blues.png" width="64" height="32" alt="gradient sample">Caribbean_Blues</div>
+<div><img style="vertical-align: text-middle;" src="Coffee.png" width="64" height="32" alt="gradient sample">Coffee</div>
+<div><img style="vertical-align: text-middle;" src="Cold_Steel.png" width="64" height="32" alt="gradient sample">Cold_Steel</div>
+<div><img style="vertical-align: text-middle;" src="Cold_Steel_2.png" width="64" height="32" alt="gradient sample">Cold_Steel_2</div>
+<div><img style="vertical-align: text-middle;" src="Crown_molding.png" width="64" height="32" alt="gradient sample">Crown_molding</div>
+<div><img style="vertical-align: text-middle;" src="Dark_1.png" width="64" height="32" alt="gradient sample">Dark_1</div>
+<div><img style="vertical-align: text-middle;" src="Deep_Sea.png" width="64" height="32" alt="gradient sample">Deep_Sea</div>
+<div><img style="vertical-align: text-middle;" src="Default.png" width="64" height="32" alt="gradient sample">Default</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Glow_Angular_1.png" width="64" height="32" alt="gradient sample">Flare_Glow_Angular_1</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Glow_Radial_1.png" width="64" height="32" alt="gradient sample">Flare_Glow_Radial_1</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Glow_Radial_2.png" width="64" height="32" alt="gradient sample">Flare_Glow_Radial_2</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Glow_Radial_3.png" width="64" height="32" alt="gradient sample">Flare_Glow_Radial_3</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Glow_Radial_4.png" width="64" height="32" alt="gradient sample">Flare_Glow_Radial_4</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Radial_101.png" width="64" height="32" alt="gradient sample">Flare_Radial_101</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Radial_102.png" width="64" height="32" alt="gradient sample">Flare_Radial_102</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Radial_103.png" width="64" height="32" alt="gradient sample">Flare_Radial_103</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Rays_Radial_1.png" width="64" height="32" alt="gradient sample">Flare_Rays_Radial_1</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Rays_Radial_2.png" width="64" height="32" alt="gradient sample">Flare_Rays_Radial_2</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Rays_Size_1.png" width="64" height="32" alt="gradient sample">Flare_Rays_Size_1</div>
+<div><img style="vertical-align: text-middle;" src="Flare_Sizefac_101.png" width="64" height="32" alt="gradient sample">Flare_Sizefac_101</div>
+<div><img style="vertical-align: text-middle;" src="Four_bars.png" width="64" height="32" alt="gradient sample">Four_bars</div>
+<div><img style="vertical-align: text-middle;" src="French_flag.png" width="64" height="32" alt="gradient sample">French_flag</div>
+<div><img style="vertical-align: text-middle;" src="French_flag_smooth.png" width="64" height="32" alt="gradient sample">French_flag_smooth</div>
+<div><img style="vertical-align: text-middle;" src="Full_saturation_spectrum_CCW.png" width="64" height="32" alt="gradient sample">Full_saturation_spectrum_CCW</div>
+<div><img style="vertical-align: text-middle;" src="Full_saturation_spectrum_CW.png" width="64" height="32" alt="gradient sample">Full_saturation_spectrum_CW</div>
+<div><img style="vertical-align: text-middle;" src="German_flag.png" width="64" height="32" alt="gradient sample">German_flag</div>
+<div><img style="vertical-align: text-middle;" src="German_flag_smooth.png" width="64" height="32" alt="gradient sample">German_flag_smooth</div>
 <div><p>half way point</p></div>
-<div><img src="Golden.png" width="64" height="32" alt="gradient sample"><p>Golden</p></div>
-<div><img src="Greens.png" width="64" height="32" alt="gradient sample"><p>Greens</p></div>
-<div><img src="Horizon_1.png" width="64" height="32" alt="gradient sample"><p>Horizon_1</p></div>
-<div><img src="Horizon_2.png" width="64" height="32" alt="gradient sample"><p>Horizon_2</p></div>
-<div><img src="Incandescent.png" width="64" height="32" alt="gradient sample"><p>Incandescent</p></div>
-<div><img src="Land_1.png" width="64" height="32" alt="gradient sample"><p>Land_1</p></div>
-<div><img src="Land_and_Sea.png" width="64" height="32" alt="gradient sample"><p>Land_and_Sea</p></div>
-<div><img src="Metallic_Something.png" width="64" height="32" alt="gradient sample"><p>Metallic_Something</p></div>
-<div><img src="Mexican_flag.png" width="64" height="32" alt="gradient sample"><p>Mexican_flag</p></div>
-<div><img src="Mexican_flag_smooth.png" width="64" height="32" alt="gradient sample"><p>Mexican_flag_smooth</p></div>
-<div><img src="Nauseating_Headache.png" width="64" height="32" alt="gradient sample"><p>Nauseating_Headache</p></div>
-<div><img src="Neon_Cyan.png" width="64" height="32" alt="gradient sample"><p>Neon_Cyan</p></div>
-<div><img src="Neon_Green.png" width="64" height="32" alt="gradient sample"><p>Neon_Green</p></div>
-<div><img src="Neon_Yellow.png" width="64" height="32" alt="gradient sample"><p>Neon_Yellow</p></div>
-<div><img src="Pastel_Rainbow.png" width="64" height="32" alt="gradient sample"><p>Pastel_Rainbow</p></div>
-<div><img src="Pastels.png" width="64" height="32" alt="gradient sample"><p>Pastels</p></div>
-<div><img src="Purples.png" width="64" height="32" alt="gradient sample"><p>Purples</p></div>
-<div><img src="Radial_Eyeball_Blue.png" width="64" height="32" alt="gradient sample"><p>Radial_Eyeball_Blue</p></div>
-<div><img src="Radial_Eyeball_Brown.png" width="64" height="32" alt="gradient sample"><p>Radial_Eyeball_Brown</p></div>
-<div><img src="Radial_Eyeball_Green.png" width="64" height="32" alt="gradient sample"><p>Radial_Eyeball_Green</p></div>
-<div><img src="Radial_Glow_1.png" width="64" height="32" alt="gradient sample"><p>Radial_Glow_1</p></div>
-<div><img src="Radial_Rainbow_Hoop.png" width="64" height="32" alt="gradient sample"><p>Radial_Rainbow_Hoop</p></div>
-<div><img src="Romanian_flag.png" width="64" height="32" alt="gradient sample"><p>Romanian_flag</p></div>
-<div><img src="Romanian_flag_smooth.png" width="64" height="32" alt="gradient sample"><p>Romanian_flag_smooth</p></div>
-<div><img src="Rounded_edge.png" width="64" height="32" alt="gradient sample"><p>Rounded_edge</p></div>
-<div><img src="Shadows_1.png" width="64" height="32" alt="gradient sample"><p>Shadows_1</p></div>
-<div><img src="Shadows_2.png" width="64" height="32" alt="gradient sample"><p>Shadows_2</p></div>
-<div><img src="Shadows_3.png" width="64" height="32" alt="gradient sample"><p>Shadows_3</p></div>
-<div><img src="Skyline.png" width="64" height="32" alt="gradient sample"><p>Skyline</p></div>
-<div><img src="Skyline_polluted.png" width="64" height="32" alt="gradient sample"><p>Skyline_polluted</p></div>
-<div><img src="Square_Wood_Frame.png" width="64" height="32" alt="gradient sample"><p>Square_Wood_Frame</p></div>
-<div><img src="Sunrise.png" width="64" height="32" alt="gradient sample"><p>Sunrise</p></div>
-<div><img src="Three_bars_sin.png" width="64" height="32" alt="gradient sample"><p>Three_bars_sin</p></div>
-<div><img src="Tropical_Colors.png" width="64" height="32" alt="gradient sample"><p>Tropical_Colors</p></div>
-<div><img src="Tube_Red.png" width="64" height="32" alt="gradient sample"><p>Tube_Red</p></div>
-<div><img src="Wood_1.png" width="64" height="32" alt="gradient sample"><p>Wood_1</p></div>
-<div><img src="Wood_2.png" width="64" height="32" alt="gradient sample"><p>Wood_2</p></div>
-<div><img src="Yellow_Contrast.png" width="64" height="32" alt="gradient sample"><p>Yellow_Contrast</p></div>
-<div><img src="Yellow_Orange.png" width="64" height="32" alt="gradient sample"><p>Yellow_Orange</p></div>
+<div><img style="vertical-align: text-middle;" src="Golden.png" width="64" height="32" alt="gradient sample">Golden</div>
+<div><img style="vertical-align: text-middle;" src="Greens.png" width="64" height="32" alt="gradient sample">Greens</div>
+<div><img style="vertical-align: text-middle;" src="Horizon_1.png" width="64" height="32" alt="gradient sample">Horizon_1</div>
+<div><img style="vertical-align: text-middle;" src="Horizon_2.png" width="64" height="32" alt="gradient sample">Horizon_2</div>
+<div><img style="vertical-align: text-middle;" src="Incandescent.png" width="64" height="32" alt="gradient sample">Incandescent</div>
+<div><img style="vertical-align: text-middle;" src="Land_1.png" width="64" height="32" alt="gradient sample">Land_1</div>
+<div><img style="vertical-align: text-middle;" src="Land_and_Sea.png" width="64" height="32" alt="gradient sample">Land_and_Sea</div>
+<div><img style="vertical-align: text-middle;" src="Metallic_Something.png" width="64" height="32" alt="gradient sample">Metallic_Something</div>
+<div><img style="vertical-align: text-middle;" src="Mexican_flag.png" width="64" height="32" alt="gradient sample">Mexican_flag</div>
+<div><img style="vertical-align: text-middle;" src="Mexican_flag_smooth.png" width="64" height="32" alt="gradient sample">Mexican_flag_smooth</div>
+<div><img style="vertical-align: text-middle;" src="Nauseating_Headache.png" width="64" height="32" alt="gradient sample">Nauseating_Headache</div>
+<div><img style="vertical-align: text-middle;" src="Neon_Cyan.png" width="64" height="32" alt="gradient sample">Neon_Cyan</div>
+<div><img style="vertical-align: text-middle;" src="Neon_Green.png" width="64" height="32" alt="gradient sample">Neon_Green</div>
+<div><img style="vertical-align: text-middle;" src="Neon_Yellow.png" width="64" height="32" alt="gradient sample">Neon_Yellow</div>
+<div><img style="vertical-align: text-middle;" src="Pastel_Rainbow.png" width="64" height="32" alt="gradient sample">Pastel_Rainbow</div>
+<div><img style="vertical-align: text-middle;" src="Pastels.png" width="64" height="32" alt="gradient sample">Pastels</div>
+<div><img style="vertical-align: text-middle;" src="Purples.png" width="64" height="32" alt="gradient sample">Purples</div>
+<div><img style="vertical-align: text-middle;" src="Radial_Eyeball_Blue.png" width="64" height="32" alt="gradient sample">Radial_Eyeball_Blue</div>
+<div><img style="vertical-align: text-middle;" src="Radial_Eyeball_Brown.png" width="64" height="32" alt="gradient sample">Radial_Eyeball_Brown</div>
+<div><img style="vertical-align: text-middle;" src="Radial_Eyeball_Green.png" width="64" height="32" alt="gradient sample">Radial_Eyeball_Green</div>
+<div><img style="vertical-align: text-middle;" src="Radial_Glow_1.png" width="64" height="32" alt="gradient sample">Radial_Glow_1</div>
+<div><img style="vertical-align: text-middle;" src="Radial_Rainbow_Hoop.png" width="64" height="32" alt="gradient sample">Radial_Rainbow_Hoop</div>
+<div><img style="vertical-align: text-middle;" src="Romanian_flag.png" width="64" height="32" alt="gradient sample">Romanian_flag</div>
+<div><img style="vertical-align: text-middle;" src="Romanian_flag_smooth.png" width="64" height="32" alt="gradient sample">Romanian_flag_smooth</div>
+<div><img style="vertical-align: text-middle;" src="Rounded_edge.png" width="64" height="32" alt="gradient sample">Rounded_edge</div>
+<div><img style="vertical-align: text-middle;" src="Shadows_1.png" width="64" height="32" alt="gradient sample">Shadows_1</div>
+<div><img style="vertical-align: text-middle;" src="Shadows_2.png" width="64" height="32" alt="gradient sample">Shadows_2</div>
+<div><img style="vertical-align: text-middle;" src="Shadows_3.png" width="64" height="32" alt="gradient sample">Shadows_3</div>
+<div><img style="vertical-align: text-middle;" src="Skyline.png" width="64" height="32" alt="gradient sample">Skyline</div>
+<div><img style="vertical-align: text-middle;" src="Skyline_polluted.png" width="64" height="32" alt="gradient sample">Skyline_polluted</div>
+<div><img style="vertical-align: text-middle;" src="Square_Wood_Frame.png" width="64" height="32" alt="gradient sample">Square_Wood_Frame</div>
+<div><img style="vertical-align: text-middle;" src="Sunrise.png" width="64" height="32" alt="gradient sample">Sunrise</div>
+<div><img style="vertical-align: text-middle;" src="Three_bars_sin.png" width="64" height="32" alt="gradient sample">Three_bars_sin</div>
+<div><img style="vertical-align: text-middle;" src="Tropical_Colors.png" width="64" height="32" alt="gradient sample">Tropical_Colors</div>
+<div><img style="vertical-align: text-middle;" src="Tube_Red.png" width="64" height="32" alt="gradient sample">Tube_Red</div>
+<div><img style="vertical-align: text-middle;" src="Wood_1.png" width="64" height="32" alt="gradient sample">Wood_1</div>
+<div><img style="vertical-align: text-middle;" src="Wood_2.png" width="64" height="32" alt="gradient sample">Wood_2</div>
+<div><img style="vertical-align: text-middle;" src="Yellow_Contrast.png" width="64" height="32" alt="gradient sample">Yellow_Contrast</div>
+<div><img style="vertical-align: text-middle;" src="Yellow_Orange.png" width="64" height="32" alt="gradient sample">Yellow_Orange</div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
