--- a/resources/patterns/index.html
+++ b/resources/patterns/index.html
@@ -6,63 +6,63 @@
 <div class="subtitle">Included With The GIMP</div>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
 <div>this is the beginning</div>
-<div><img src="3D_Green.png" width="32" height="32" alt="pattern sample"><p>3D Green</p></div>
-<div><img src="Amethyst.png" width="32" height="32" alt="pattern sample"><p>Amethyst</p></div>
-<div><img src="Big_Blue.png" width="32" height="32" alt="pattern sample"><p>Big Blue</p></div>
-<div><img src="Blue_Grid.png" width="32" height="32" alt="pattern sample"><p>Blue Grid</p></div>
-<div><img src="Blue_Squares.png" width="32" height="32" alt="pattern sample"><p>Blue Squares</p></div>
-<div><img src="Blue_Web.png" width="32" height="32" alt="pattern sample"><p>Blue Web</p></div>
-<div><img src="Bricks.png" width="32" height="32" alt="pattern sample"><p>Bricks</p></div>
-<div><img src="Burlap.png" width="32" height="32" alt="pattern sample"><p>Burlap</p></div>
-<div><img src="Burlwood.png" width="32" height="32" alt="pattern sample"><p>Burlwood</p></div>
-<div><img src="Chocolate_Swirl.png" width="32" height="32" alt="pattern sample"><p>Chocolate Swirl</p></div>
-<div><img src="Cork_board.png" width="32" height="32" alt="pattern sample"><p>Cork board</p></div>
-<div><img src="Crack.png" width="32" height="32" alt="pattern sample"><p>Crack</p></div>
-<div><img src="Craters.png" width="32" height="32" alt="pattern sample"><p>Craters</p></div>
-<div><img src="Crinkled_Paper.png" width="32" height="32" alt="pattern sample"><p>Crinkled Paper</p></div>
-<div><img src="Dried_mud.png" width="32" height="32" alt="pattern sample"><p>Dried mud</p></div>
-<div><img src="Electric_Blue.png" width="32" height="32" alt="pattern sample"><p>Electric Blue</p></div>
-<div><img src="Fibers.png" width="32" height="32" alt="pattern sample"><p>Fibers</p></div>
-<div><img src="Granite_1.png" width="32" height="32" alt="pattern sample"><p>Granite #1</p></div>
-<div><img src="Ice.png" width="32" height="32" alt="pattern sample"><p>Ice</p></div>
-<div><img src="Java.png" width="32" height="32" alt="pattern sample"><p>Java</p></div>
-<div><img src="Leather.png" width="32" height="32" alt="pattern sample"><p>Leather</p></div>
-<div><img src="Leopard.png" width="32" height="32" alt="pattern sample"><p>Leopard</p></div>
-<div><img src="Lightning.png" width="32" height="32" alt="pattern sample"><p>Lightning</p></div>
-<div><img src="Maple_Leaves.png" width="32" height="32" alt="pattern sample"><p>Maple Leaves</p></div>
-<div><img src="Marble_1.png" width="32" height="32" alt="pattern sample"><p>Marble #1</p></div>
-<div><img src="Marble_2.png" width="32" height="32" alt="pattern sample"><p>Marble #2</p></div>
-<div><img src="Marble_3.png" width="32" height="32" alt="pattern sample"><p>Marble #3</p></div>
+<div><img style="vertical-align: text-middle;" src="3D_Green.png" width="32" height="32" alt="pattern sample">3D Green</div>
+<div><img style="vertical-align: text-middle;" src="Amethyst.png" width="32" height="32" alt="pattern sample">Amethyst</div>
+<div><img style="vertical-align: text-middle;" src="Big_Blue.png" width="32" height="32" alt="pattern sample">Big Blue</div>
+<div><img style="vertical-align: text-middle;" src="Blue_Grid.png" width="32" height="32" alt="pattern sample">Blue Grid</div>
+<div><img style="vertical-align: text-middle;" src="Blue_Squares.png" width="32" height="32" alt="pattern sample">Blue Squares</div>
+<div><img style="vertical-align: text-middle;" src="Blue_Web.png" width="32" height="32" alt="pattern sample">Blue Web</div>
+<div><img style="vertical-align: text-middle;" src="Bricks.png" width="32" height="32" alt="pattern sample">Bricks</div>
+<div><img style="vertical-align: text-middle;" src="Burlap.png" width="32" height="32" alt="pattern sample">Burlap</div>
+<div><img style="vertical-align: text-middle;" src="Burlwood.png" width="32" height="32" alt="pattern sample">Burlwood</div>
+<div><img style="vertical-align: text-middle;" src="Chocolate_Swirl.png" width="32" height="32" alt="pattern sample">Chocolate Swirl</div>
+<div><img style="vertical-align: text-middle;" src="Cork_board.png" width="32" height="32" alt="pattern sample">Cork board</div>
+<div><img style="vertical-align: text-middle;" src="Crack.png" width="32" height="32" alt="pattern sample">Crack</div>
+<div><img style="vertical-align: text-middle;" src="Craters.png" width="32" height="32" alt="pattern sample">Craters</div>
+<div><img style="vertical-align: text-middle;" src="Crinkled_Paper.png" width="32" height="32" alt="pattern sample">Crinkled Paper</div>
+<div><img style="vertical-align: text-middle;" src="Dried_mud.png" width="32" height="32" alt="pattern sample">Dried mud</div>
+<div><img style="vertical-align: text-middle;" src="Electric_Blue.png" width="32" height="32" alt="pattern sample">Electric Blue</div>
+<div><img style="vertical-align: text-middle;" src="Fibers.png" width="32" height="32" alt="pattern sample">Fibers</div>
+<div><img style="vertical-align: text-middle;" src="Granite_1.png" width="32" height="32" alt="pattern sample">Granite #1</div>
+<div><img style="vertical-align: text-middle;" src="Ice.png" width="32" height="32" alt="pattern sample">Ice</div>
+<div><img style="vertical-align: text-middle;" src="Java.png" width="32" height="32" alt="pattern sample">Java</div>
+<div><img style="vertical-align: text-middle;" src="Leather.png" width="32" height="32" alt="pattern sample">Leather</div>
+<div><img style="vertical-align: text-middle;" src="Leopard.png" width="32" height="32" alt="pattern sample">Leopard</div>
+<div><img style="vertical-align: text-middle;" src="Lightning.png" width="32" height="32" alt="pattern sample">Lightning</div>
+<div><img style="vertical-align: text-middle;" src="Maple_Leaves.png" width="32" height="32" alt="pattern sample">Maple Leaves</div>
+<div><img style="vertical-align: text-middle;" src="Marble_1.png" width="32" height="32" alt="pattern sample">Marble #1</div>
+<div><img style="vertical-align: text-middle;" src="Marble_2.png" width="32" height="32" alt="pattern sample">Marble #2</div>
+<div><img style="vertical-align: text-middle;" src="Marble_3.png" width="32" height="32" alt="pattern sample">Marble #3</div>
 <div><p>half way point</p></div>
-<div><img src="Nops.png" width="32" height="32" alt="pattern sample"><p>Nops</p></div>
-<div><img src="One_Small_Step....png" width="32" height="32" alt="pattern sample"><p>One Small Step...</p></div>
-<div><img src="Paper.png" width="32" height="32" alt="pattern sample"><p>Paper</p></div>
-<div><img src="Parque_1.png" width="32" height="32" alt="pattern sample"><p>Parque #1</p></div>
-<div><img src="Parque_2.png" width="32" height="32" alt="pattern sample"><p>Parque #2</p></div>
-<div><img src="Parque_3.png" width="32" height="32" alt="pattern sample"><p>Parque #3</p></div>
-<div><img src="Pastel_Stuff.png" width="32" height="32" alt="pattern sample"><p>Pastel Stuff</p></div>
-<div><img src="Pine.png" width="32" height="32" alt="pattern sample"><p>Pine</p></div>
-<div><img src="Pine?.png" width="32" height="32" alt="pattern sample"><p>Pine?</p></div>
-<div><img src="Pink_Marble.png" width="32" height="32" alt="pattern sample"><p>Pink Marble</p></div>
-<div><img src="Pool_Bottom.png" width="32" height="32" alt="pattern sample"><p>Pool Bottom</p></div>
-<div><img src="Qbert.png" width="32" height="32" alt="pattern sample"><p>Qbert</p></div>
-<div><img src="Rain.png" width="32" height="32" alt="pattern sample"><p>Rain</p></div>
-<div><img src="Red_Cubes.png" width="32" height="32" alt="pattern sample"><p>Red Cubes</p></div>
-<div><img src="Rocks.png" width="32" height="32" alt="pattern sample"><p>Rocks</p></div>
-<div><img src="Sky.png" width="32" height="32" alt="pattern sample"><p>Sky</p></div>
-<div><img src="Slate.png" width="32" height="32" alt="pattern sample"><p>Slate</p></div>
-<div><img src="Small_Squares.png" width="32" height="32" alt="pattern sample"><p>Small Squares</p></div>
-<div><img src="Starfield.png" width="32" height="32" alt="pattern sample"><p>Starfield</p></div>
-<div><img src="Stone.png" width="32" height="32" alt="pattern sample"><p>Stone</p></div>
-<div><img src="Terra.png" width="32" height="32" alt="pattern sample"><p>Terra</p></div>
-<div><img src="Tree_Bark.png" width="32" height="32" alt="pattern sample"><p>Tree Bark</p></div>
-<div><img src="Walnut.png" width="32" height="32" alt="pattern sample"><p>Walnut</p></div>
-<div><img src="Warning.png" width="32" height="32" alt="pattern sample"><p>Warning!</p></div>
-<div><img src="Wood.png" width="32" height="32" alt="pattern sample"><p>Wood</p></div>
-<div><img src="Wood_1.png" width="32" height="32" alt="pattern sample"><p>Wood #1</p></div>
-<div><img src="Wood_2.png" width="32" height="32" alt="pattern sample"><p>Wood #2</p></div>
-<div><img src="Wood_of_some_sort.png" width="32" height="32" alt="pattern sample"><p>Wood of some sort</p></div>
-<div><img src="recessed.png" width="32" height="32" alt="pattern sample"><p>recessed</p></div>
+<div><img style="vertical-align: text-middle;" src="Nops.png" width="32" height="32" alt="pattern sample">Nops</div>
+<div><img style="vertical-align: text-middle;" src="One_Small_Step....png" width="32" height="32" alt="pattern sample">One Small Step...</div>
+<div><img style="vertical-align: text-middle;" src="Paper.png" width="32" height="32" alt="pattern sample">Paper</div>
+<div><img style="vertical-align: text-middle;" src="Parque_1.png" width="32" height="32" alt="pattern sample">Parque #1</div>
+<div><img style="vertical-align: text-middle;" src="Parque_2.png" width="32" height="32" alt="pattern sample">Parque #2</div>
+<div><img style="vertical-align: text-middle;" src="Parque_3.png" width="32" height="32" alt="pattern sample">Parque #3</div>
+<div><img style="vertical-align: text-middle;" src="Pastel_Stuff.png" width="32" height="32" alt="pattern sample">Pastel Stuff</div>
+<div><img style="vertical-align: text-middle;" src="Pine.png" width="32" height="32" alt="pattern sample">Pine</div>
+<div><img style="vertical-align: text-middle;" src="Pine?.png" width="32" height="32" alt="pattern sample">Pine?</div>
+<div><img style="vertical-align: text-middle;" src="Pink_Marble.png" width="32" height="32" alt="pattern sample">Pink Marble</div>
+<div><img style="vertical-align: text-middle;" src="Pool_Bottom.png" width="32" height="32" alt="pattern sample">Pool Bottom</div>
+<div><img style="vertical-align: text-middle;" src="Qbert.png" width="32" height="32" alt="pattern sample">Qbert</div>
+<div><img style="vertical-align: text-middle;" src="Rain.png" width="32" height="32" alt="pattern sample">Rain</div>
+<div><img style="vertical-align: text-middle;" src="Red_Cubes.png" width="32" height="32" alt="pattern sample">Red Cubes</div>
+<div><img style="vertical-align: text-middle;" src="Rocks.png" width="32" height="32" alt="pattern sample">Rocks</div>
+<div><img style="vertical-align: text-middle;" src="Sky.png" width="32" height="32" alt="pattern sample">Sky</div>
+<div><img style="vertical-align: text-middle;" src="Slate.png" width="32" height="32" alt="pattern sample">Slate</div>
+<div><img style="vertical-align: text-middle;" src="Small_Squares.png" width="32" height="32" alt="pattern sample">Small Squares</div>
+<div><img style="vertical-align: text-middle;" src="Starfield.png" width="32" height="32" alt="pattern sample">Starfield</div>
+<div><img style="vertical-align: text-middle;" src="Stone.png" width="32" height="32" alt="pattern sample">Stone</div>
+<div><img style="vertical-align: text-middle;" src="Terra.png" width="32" height="32" alt="pattern sample">Terra</div>
+<div><img style="vertical-align: text-middle;" src="Tree_Bark.png" width="32" height="32" alt="pattern sample">Tree Bark</div>
+<div><img style="vertical-align: text-middle;" src="Walnut.png" width="32" height="32" alt="pattern sample">Walnut</div>
+<div><img style="vertical-align: text-middle;" src="Warning.png" width="32" height="32" alt="pattern sample">Warning!</div>
+<div><img style="vertical-align: text-middle;" src="Wood.png" width="32" height="32" alt="pattern sample">Wood</div>
+<div><img style="vertical-align: text-middle;" src="Wood_1.png" width="32" height="32" alt="pattern sample">Wood #1</div>
+<div><img style="vertical-align: text-middle;" src="Wood_2.png" width="32" height="32" alt="pattern sample">Wood #2</div>
+<div><img style="vertical-align: text-middle;" src="Wood_of_some_sort.png" width="32" height="32" alt="pattern sample">Wood of some sort</div>
+<div><img style="vertical-align: text-middle;" src="recessed.png" width="32" height="32" alt="pattern sample">recessed</div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
