--- a/maillists.html
+++ b/maillists.html
@@ -10,7 +10,146 @@
 </p>
 <div class="subtitle">List Etiquette</div>
 <p>
-  GSR! help everyone!!  :)
+  When sending mails to the lists there are some recommendations you
+  should follow, at least in The Gimp official lists, but probably are
+  nice for all lists to make everyone life easier:
+</p>
+<ul>
+  <li>
+  Stay on topic. If things go off topic, use direct mail. Gimp User
+  list topics are user problems, techniques, hardware advice (tablets,
+  scanners, monitors), request for comments about images and usage in
+  general. Gimp Devel list topics are coding, patches, bugs and other
+  Gimp's guts things.
+  </li>
+  <li>
+  English is the official languaje of the lists. There is people from
+  all around the globe so we use it. If you have problem with English,
+  a small note about it is enough. Saying which languajes do you speak
+  better will also help, maybe someone can help clarifying the obscure
+  parts of your mail.
+  </li>
+  <li>
+  Before reporting problems, check again. Make sure you are following
+  the intructions correctly and that your version is not old (or that
+  the problem also appears in modern versions). If you can get a
+  friend to test your problem in other computer, better, maybe you
+  discover what is your problem, or can provide info about what cases
+  are free (for example bugs that only happen in Alpha computers).
+  </li>
+  <li>
+  Do not use HTML. Some people will have problems to view the mails
+  and will ignore you even if they have alternative methods to view it
+  (like reading the HTML code or launching a browser). Other will
+  flame you (some maybe even have bot for that). So to be sure
+  everyone can read it, use plain text mail.
+  </li>
+  <li>
+  Only useful attachments, and if small. If it is more than a few KB
+  (say more than 10), you should (must?) upload somewhere and post the
+  URL instead.
+  </li>
+  Use (the best) compression you can find for attachments or URLs.
+  Remember that you can compress .xcf files with gzip or bzip2
+  (.xcf.gz or .xcf.bz2, respec.). Those compressors are free and
+  gratis and at least gzip should be handled by all Gimp version I
+  know, so no excuses. For images you can use PNG (ie when showing bad
+  results and you need the image to be the one you are seeing in your
+  monitor) or JPEG (asking how to do something, so if the image is a
+  bit damaged due JPEG algorithm, it does not matter).
+  <li>
+  Cut text lines to 70 or so chars, so it can be viewed anywhere. If
+  you have a big screen, good for you, others do not or just want to
+  use the big monitor to have more than one thing on screen at the
+  same time. Most mail apps should do it for you.
+  </li>
+  <li>
+  Try to use a monospace (typewriter, non proportional) font when
+  reading or writing mails. For common mails it will not be important,
+  but if someone post a text figure (ASCII art) to explain something,
+  it will look really bad if you use other font (in that case it is a
+  must, not a recommendation). In the same style, do not use tabs, use
+  spaces instead, that way everyone will see the same.
+  </li>
+  <li>
+  Do not expect people to see other character sets beyond 7 bit ASCII
+  and images supported by Gimp. You can hope they will, but do not
+  think they will. The same applies to you, if you see text with weird
+  characters, maybe your computer has no support for them. Or you do
+  not have the loader plug-in for Gimp, if the problem is an error
+  with an image. Be permisive about these problems and never force
+  them (aka do not send things you are sure most people will be unable
+  to see, and make sure your mailer sets the correct MIME type, not a
+  general one).
+  </li>
+  <li>
+  When replying to messages, quote the important phrases to give
+  context. Use something like &quot;&gt;&quot;, &quot;&gt; &quot;
+  (yep, &quot;$gt;&quot; and space), &quot;]&quot; or any other
+  character(s) that seem logical. As most repetitive things, your mail
+  app should do it for you. But do not include the full mail again,
+  select that part not useful and delete them (yeah, another thing
+  computers can do, delete full areas).
+  </li>
+  <li>
+  Do not write all in one big chunk, use blank lines to separate
+  things. Also use blank lines to separate your text from quoted
+  text. Try to read 100 lines of text in one paragraph, then the same
+  text with some blank lines, each 5-10 lines (20-10 paragraphs).
+  Some people just ignore the things that they can not read easily.
+  </li>
+  <li>
+  No auto replies ("I am on holidays"). They just waste space, and
+  people will think they got something when they are only talking to a
+  bot. Unsubscribe or set you subscription to no mail mode if you
+  need.
+  </li>
+  <li>
+  If you have few time, you can filter the messages. Message headers
+  can help a lot to make your life easier, most mail apps can filter
+  by headers, or use a helper app for that. The subjects have tags to
+  help you identify mail if you sort by hand all incoming mail in one
+  mailbox. You can delete the tag and use different mailbox too (use
+  other header as filter, like X-BeenThere). Another option is to
+  receive the mails in digest mode, all in one mail, so it saves space
+  and you can scan the on-going talks quickly.
+  </li>
+  <li>
+  When posting reports, paste all the interesting info. Use common
+  (hehehe) sense to decide what, you do not need to post the size of
+  the computer box, but be ready to provide more info in next mails. A
+  good start is a small description of the computer (CPU family and
+  OS) plus versions of related software (Gimp, libraries, compiler)
+  and the steps you followed to find the problem (write your &quot;How
+  to crash Gimp in X steps with Y tool&quot; tutorial). If you have
+  the solution, even better. ;]
+  </li>
+  <li>
+  If you receive spam, do not reply to it. The list has filters, but
+  they are not perfect. The best way to handle garbage is to ignore
+  it. In general, you should delete spam, via list or direct, cos the
+  best solution is to desintegrate the spammers, and the second best
+  to ignore them (guess which one is legal).
+  </li>
+  <li>
+  No spam like mails allowed. No chain letters, no virus alarms, only
+  Gimp. I think that while some rules are more recommendations, this
+  is a real rule, so real that you could get kicked out of the list.
+  </li>
+  <li>
+  If you have doubts about the rules, read the archives. Or subscribe
+  and just read it until you see how things are. We do not bite people
+  for just reading, but some can get very unfriendly with those that
+  ignore the basic rules. We do not ask for ultra complex things and
+  etiquette, but things that computers can do for you and a nice
+  behaviour on the rest. Most (if not all) of the rules have been in
+  use for very long on Internet (they are a tradition, but what is
+  more important is that they work).
+  </li>
+</ul>
+<p>
+  Conclusion: the faster, easier and cheaper people can see what is
+  going in the mails, the better for all. And the topic is Gimp.
 </p>
 
 <!--#include virtual="/includes/linkbar.inc" -->
