added more code examples

--- a/template.html
+++ b/template.html
@@ -4,9 +4,32 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">Title goes here</div>
-<div class="subtitle">Subtitle goes here</div>
+<div class="subtitle">Sample subtitle</div>
 <p>
-  Text goes here...
+  Sample text. Sample text. Sample text. Sample text. Sample text.
+  Sample text. Sample text. Sample text. Sample text. Sample text. 
+  Sample text. Sample text. Sample text. Sample text. Sample text. 
+</p>
+<div class="subtitle">Yet another subtitle</div>
+<p>
+This is an example of an unordered list:
+<ul>
+<li>Unordered list item one</li>
+<li>Unordered list item two</li>
+</ul>
+</p>
+
+<p>
+This is an example of an ordered list:
+<ol>
+<li>Unordered list item one</li>
+<li>Unordered list item two</li>
+</ol>
+</p>
+
+<div class="subtitle">Inserting images</div>
+<p class="images">
+  <img src="images/thegimp.png" alt="The GIMP"/>
 </p>
 
 <!--#include virtual="/includes/linkbar.inc" -->
