added even more code examples (thanks to UnNamed)

--- a/template.html
+++ b/template.html
@@ -12,7 +12,8 @@
 </p>
 <div class="subtitle">Yet another subtitle</div>
 <p>
-This is an example of an unordered list:
+This is an example of an unordered list. Use this for random informational
+things that do not really follow order:
 <ul>
 <li>Unordered list item one</li>
 <li>Unordered list item two</li>
@@ -20,7 +21,8 @@ This is an example of an unordered list:
 </p>
 
 <p>
-This is an example of an ordered list:
+This is an example of an ordered list. If you need to show steps, use this
+instead of paragraphs:
 <ol>
 <li>Unordered list item one</li>
 <li>Unordered list item two</li>
