--- a/template.html
+++ b/template.html
@@ -24,8 +24,8 @@ things that do not really follow order:
 This is an example of an ordered list. If you need to show steps, use this
 instead of paragraphs:
 <ol>
-<li>Unordered list item one</li>
-<li>Unordered list item two</li>
+<li>Ordered list item one</li>
+<li>Ordered list item two</li>
 </ol>
 </p>
 
