replaced <h?>...</h?> with the appropiate divs. removed references to winmenu.inc

--- a/windows/get_started.html
+++ b/windows/get_started.html
@@ -3,10 +3,7 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<!--#set var="page" value="getstarted" -->
-<!--#include virtual="winmenu.inc" -->
-
-<h2 class="heading">Getting started with the GIMP</h2>
+<div class="heading">Getting started with the GIMP</div>
 
 <p>
 The GIMP is an incredibly complex tool that rivals expensive, high-end software in the richness of its feature set. It can be quite daunting to start learning to use the GIMP.
