--- a/windows/index.html
+++ b/windows/index.html
@@ -3,7 +3,7 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<h2 class="heading">GIMP for Windows</h2>
+<div class="heading">GIMP for Windows</div>
 
 <p>
   GIMP is developed mostly under Linux, but it may be compiled for other systems such as Windows too.
@@ -21,7 +21,7 @@
 <li><a href="develop.html">How to help us develop the GIMP further</a> (also: how to report errors)</li>
 </ul>
 
-<h3 class="subtitle">More to be included on these pages</h3>
+<div class="subtitle">More to be included on these pages</div>
 
 <ul>
 <li>Installation Instructions</li>
