list of authors and contributors
2002-10-21 rockwlrs <rock@gimp.org>

        * about/authors.html: list of authors and contributors

        * about/authorsgen.pl: tools/authorsgen/authorsgen.pl from the GIMP
        source distribution, modified to create a webpage instead

        * about/contributors: tools/authorsgen/contributors from the GIMP
        source distribution.

        * about/index.html: changed authors link to point to the right file

        * install.exclude: added authorsgen.pl and contributors

--- a/about/index.html
+++ b/about/index.html
@@ -76,7 +76,7 @@
   </ul>
 <div class="subtitle">The GIMP Authors</div>
   <ul>
-    <li><a name="src-authors" href="AUTHORS">Authors and Contributors</a></li>
+    <li><a name="src-authors" href="authors.html">Authors and Contributors</a></li>
     <li><a name="src-maintainers" href="MAINTAINERS">Maintainers</a></li>
     <li><a name="src-pmaintainers" href="PLUGIN_MAINTAINERS">Plug-in Maintainers</a></li>
   </ul>
