Modified ChangeLog. Add the webpage for original tutorial. I want the
Modified ChangeLog.
Add the webpage for original tutorial.
I want the author to see the tutorial before I make changes so the old images are back also.

--- a/tutorials/Straight_Line/index.html
+++ b/tutorials/Straight_Line/index.html
@@ -119,6 +119,10 @@
   This one I used the Dodge tool on the top and left of a blue box, then used the burn tool on the right and bottom.
 </p>
 
+<p>
+  The original tutorial can be find <a href="http://www.gimp.org/~sjburges/straightline/straightline.html">Here</a>
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
