Modified ChangeLog. Small fixes in the language and link.
Modified ChangeLog.
Small fixes in the language and link.

--- a/tutorials/Straight_Line/index.html
+++ b/tutorials/Straight_Line/index.html
@@ -120,7 +120,7 @@
 </p>
 
 <p>
-  The original tutorial can be find <a href="http://www.gimp.org/~sjburges/straightline/straightline.html">Here</a>
+  The original tutorial can be found <a href="http://www.gimp.org/~sjburges/straightline/straightline.html">here</a>.
 </p>
 
 </div>
